--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             <a href="index.html">home</a>
           </li>
           <li>
-            <a href="about.html">about</a>
+            <a href="#">about</a>
           </li>
           <li>
-            <a href="projects.html">projects</a>
+            <a href="#">projects</a>
           </li>
           <li>
-            <a href="contact.html">contact</a>
+            <a href="#">contact</a>
           </li>
         </ul>
         <!-- social media -->
